mysql-data.yaml
apiVersion: v1
kind: Pod
metadata:
  name: setup
spec:
  restartPolicy: Never
  containers:
  - name: setup
    image: anthonyamanse/mysql-bookinfo
    imagePullPolicy: Always
