post-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: post
  labels:
    app: post
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: post
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: post-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: post
        version: v1
    spec:
      containers:
      - name: post
        image: anthonyamanse/test-post-v1:testPost5
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
